test/spec_vectors/i64/fail/module_17.wat
(module (func (result i64) (i64.clz (i32.const 0))))